Garmin: use fit_profile.json to generate FIT message classes - cleanup